deployment/kubernetes/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: rtmn-complete
  namespace: rtmn
  labels:
    app: rtmn-complete
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: rtmn-complete
---
apiVersion: v1
kind: Service
metadata:
  name: energy-os
  namespace: rtmn
  labels:
    app: energy-os
spec:
  type: ClusterIP
  ports:
    - port: 3015
      targetPort: 3015
      protocol: TCP
      name: http
  selector:
    app: energy-os
---
apiVersion: v1
kind: Service
metadata:
  name: boa-dashboard
  namespace: rtmn
  labels:
    app: boa-dashboard
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: boa-dashboard
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: rtmn
  labels:
    app: mongodb
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
      name: mongo
  selector:
    app: mongodb
---
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  namespace: rtmn
  labels:
    app: redis
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: redis
  selector:
    app: redis
